# vektor

./: .cursorrules  .gitignore  README.md  VEKTOR_CONTEXT.md  config.py  main.py  pyproject.toml  run_gui.py
backend/: commands.py  database.py  main.py  memory_vector.py  voice_engine.py
core/: agent.py
database/: connection.py  models.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPanel.tsx  FileBrowser.tsx  JarvisCore.tsx  Terminal.tsx
frontend/src/hooks/: useWebSocket.ts
memory/: vector_store.py
services/: audio_service.py  executor_service.py  web_scaffolder.py
ui/: app.py  controller.py
ui/assets/: style.qss
ui/components/: chat_area.py  input_bar.py  preview_panel.py  sidebar.py  voice_toggle.py
