[project]
name = "vektor"
version = "0.1.0"
description = "Local persistent AI-native assistant with semantic memory"
authors = [
    {name = "Ahsan Shahid"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "sqlmodel>=0.0.39,<0.0.40",
    "chromadb>=1.5.9,<2.0.0",
    "ollama>=0.6.2,<0.7.0",
    "typer>=0.26.8,<0.27.0",
    "rich>=15.0.0,<16.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "pyside6 (>=6.11.1,<7.0.0)",
    "speechrecognition (>=3.17.0,<4.0.0)",
    "pyttsx3 (>=2.99,<3.0)",
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "websockets (>=16.1,<17.0)",
    "sounddevice (>=0.5.5,<0.6.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
